--- a/src/codepens/liquidBack/index.css
+++ b/src/codepens/liquidBack/index.css
@@ -6,16 +6,24 @@
 @import url(https://fonts.googleapis.com/css?family=Exo:100);
 
 /* Background data (Original source: https://subtlepatterns.com/grid-me/) */
-.body {
-  background-image: url("../../assets/img/ss.webp");
+.bg-url {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/checkerboard-cross.png");
+  background-repeat: repeat;
+  animation: bg-scrolling-reverse 2.92s infinite linear;
+  z-index: -1;
 }
 
 .bg-width {
-  width: 50px;
+  width: 100vw;
 }
 
 .bg-height {
-  height: 50px;
+  height: 100vh;
 }
 
 /* Animations */
@@ -47,6 +55,9 @@ body {
   -moz-animation-timing-function: linear;
   -o-animation-timing-function: linear;
   animation-timing-function: linear;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
 body::before {
